Wed Mar 19 23:05:30 2003  NAKAMURA, Hiroshi <nahi@ruby-lang.org>

	* lib/tracer.rb (trace_func): save and recover Thread.critical state.
	  Fixed by Fukumoto Atsushi <fukumoto@imasy.or.jp> [ruby-dev:19830]

Tue Mar 11 21:06:31 2003  Minero Aoki  <aamine@loveruby.net>

	* lib/net/smtp.rb (auth_cram_md5): Digest string had wrongly
	  included '\n' when user name is too long. (ruby-bugs-ja:PR#404)

Fri Mar  7 00:30:33 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/Win32API/Win32API.c: no longer use inline-asms.

	* ext/Win32API/extconf.rb: no need to add gcc options.

Fri Feb 28 22:53:55 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* win32/win32.c (flock): maps error code.

	* win32/win32.c (win32_asynchronize): returns errno from child
	  thread.

	* win32/win32.c (win32_fclose, win32_close): ensures unlocked.

Wed Feb 26 00:02:41 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* string.c (rb_str_dup): set FL_EXIVAR when copied generic ivar.
	  (ruby-bugs-ja:PR#400)

Sun Feb 23 14:39:40 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* intern.h (rb_define_private_method): duplicated.

	* configure.in (__NO_ISOCEXT): need not to add this definition on
	  MinGW.

Sat Feb 22 02:45:20 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_create): may called from place higher than
	  rb_gc_stack_start.

	* gc.c (Init_stack): update rb_gc_stack_start if it is lower (or
	  higher if stack grows down) than the previous value.

Fri Feb 21 17:19:27 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* eval.c (rb_f_require): do not need to abort if a DLEXT file
	  is not found.

Thu Feb 20 23:11:42 2003  Akinori MUSHA  <knu@iDaemons.org>

	* mdoc2man.rb: New file.  A mdoc to man converter ported from
	  Perl. [merged from 1.8]

	* configure.in (MANTYPE): Detect if the system's nroff(1) groks
	  mdoc.  Provide a new option --with-mantype={doc|man} in case the
	  check does not work as expected. [merged from 1.8]
